# sentrix

./: .clippy.toml  .dockerignore  .env.example  .gitignore  .gitleaksignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  WHITEPAPER.md  deny.toml  docker-compose.yml  env.example
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml
audits/: codebase-areas-1-7-audit-2026-04-27.md  consensus-computed-jail-design.md  consensus-jail-phase-d-scoping.md  jail-cascade-root-cause-analysis.md  libp2p-resilience-audit-2026-04-27.md  reward-distribution-flow-audit-2026-04-27.md  sentrix-production-readiness-audit-2026-04-27.md
benchmark/: deploy_evm_test.py  deploy_src20.py  reset_testnet.sh  results.json  test_eth_send_raw.py  tps_benchmark.py
crates/sentrix-bft/: Cargo.toml
crates/sentrix-bft/src/: engine.rs  lib.rs  messages.rs
crates/sentrix-bft/src/engine/: state.rs  timeouts.rs  vote_collector.rs
crates/sentrix-bft/tests/: four_validator_harness.rs  m15_repropose.rs
crates/sentrix-codec/: Cargo.toml
crates/sentrix-codec/src/: lib.rs
crates/sentrix-core/: Cargo.toml
crates/sentrix-core/src/: authority.rs  block_executor.rs  block_producer.rs  blockchain.rs  chain_queries.rs  genesis.rs  lib.rs  mempool.rs  state_export.rs  storage.rs  token_ops.rs  vm.rs
crates/sentrix-core/src/block_executor/: evm.rs  validate.rs
crates/sentrix-core/src/parallel/: mod.rs  rw_set.rs  scheduler.rs
crates/sentrix-core/tests/: fork_determinism.rs  parallel_determinism.rs  phase_d_4validator_determinism.rs  rca_env_repro.rs  rca_vps3_env_repro.rs
crates/sentrix-evm/: Cargo.toml
crates/sentrix-evm/src/: database.rs  executor.rs  gas.rs  lib.rs  logs.rs  precompiles.rs  receipts.rs  writeback.rs
crates/sentrix-grpc/: Cargo.toml  build.rs
crates/sentrix-grpc/proto/: sentrix.proto
crates/sentrix-grpc/src/: lib.rs
crates/sentrix-network/: Cargo.toml
crates/sentrix-network/src/: behaviour.rs  lib.rs  libp2p_node.rs  node.rs  sync.rs  transport.rs
crates/sentrix-network/src/libp2p_node/: multiaddr.rs  ratelimit.rs  validators.rs
crates/sentrix-precompiles/: Cargo.toml
crates/sentrix-primitives/: Cargo.toml
crates/sentrix-primitives/src/: account.rs  address.rs  block.rs  error.rs  events.rs  justification.rs  lib.rs  merkle.rs  transaction.rs
crates/sentrix-rpc/: Cargo.toml
crates/sentrix-rpc-types/: Cargo.toml
crates/sentrix-rpc/src/: events.rs  explorer.rs  explorer_api.rs  jsonrpc.rs  lib.rs  routes.rs
crates/sentrix-rpc/src/explorer/: helpers.rs  layout.rs
crates/sentrix-rpc/src/jsonrpc/: eth.rs  helpers.rs  mod.rs  net.rs  sentrix.rs  web3.rs
crates/sentrix-rpc/src/routes/: accounts.rs  auth.rs  cache.rs  chain.rs  epoch.rs  mod.rs  ops.rs  ratelimit.rs  staking.rs  tokens.rs  transactions.rs  types.rs
crates/sentrix-rpc/src/ws/: mod.rs
crates/sentrix-staking/: Cargo.toml
crates/sentrix-staking/src/: epoch.rs  lib.rs  slashing.rs  staking.rs
crates/sentrix-staking/src/slashing/: double_sign.rs  liveness.rs
crates/sentrix-storage/: Cargo.toml
crates/sentrix-storage/src/: chain.rs  error.rs  lib.rs  mdbx.rs  tables.rs
crates/sentrix-trie/: Cargo.toml
crates/sentrix-trie/src/: address.rs  cache.rs  lib.rs  node.rs  proof.rs  storage.rs  tree.rs
crates/sentrix-wallet/: Cargo.toml
crates/sentrix-wallet/src/: keystore.rs  lib.rs  wallet.rs
crates/sentrix-wire/: Cargo.toml
crates/sentrix-wire/src/: lib.rs
docs/: GOVERNANCE.md  README.md  intro.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: intro.md
docs/architecture/: CONSENSUS.md  EVM.md  NETWORKING.md  OVERVIEW.md  STATE.md  TRANSACTIONS.md
docs/brand/: HERO_COPY.md  PRESS_BOILERPLATE.md  SOCIAL_BIOS.md
docs/i18n/: ROADMAP_INDONESIA.md
docs/operations/: API_ENDPOINTS.md  API_REFERENCE.md  CI_CD.md  CLAIM_REWARDS.md  CONTRACT_VERIFICATION.md  DEPLOYMENT.md  DEVELOPER_QUICKSTART.md  DOMAINS.md  EMERGENCY_ROLLBACK.md  GRPC.md  METAMASK.md  MONITORING.md  NETWORKS.md  OBSERVABILITY.md  SDK_JS_TS.md  SMART_CONTRACT_GUIDE.md  SRC721_SPEC.md  STATE_EXPORT.md  TESTNET_RECOVERY.md  TRACE_RPC_SPEC.md  VALIDATORS.md  VALIDATOR_GUIDE.md  VALIDATOR_ONBOARDING.md  WEBSOCKET_SUBSCRIPTIONS.md
docs/roadmap/: CHANGELOG.md  PHASE1.md  PHASE2.md  PHASE3.md
docs/security/: ATTACK_VECTORS.md  AUDIT_SUMMARY.md  MULTISIG.md  PENTEST_RESULTS.md  SECURITY_AUDIT_V11.md  SECURITY_REPORT.md
docs/tokenomics/: AIRDROP_MECHANICS.md  OVERVIEW.md  REWARD_ESCROW.md  SRX.md  STAKING.md  TOKEN_STANDARDS.md
genesis/: mainnet.toml  testnet.toml
scripts/: deploy-docs.sh  deploy-sntx-mainnet.sh  deploy-validator.sh  emergency-deploy.sh  fast-deploy.sh  install-testnet-watchdog.sh  install-validator.sh  testnet-livelock-watchdog.sh
src/: lib.rs  main.rs
src/api/: explorer.rs  jsonrpc.rs  mod.rs  routes.rs
src/core/: account.rs  authority.rs  bft.rs  bft_messages.rs  block.rs  block_executor.rs  block_producer.rs  blockchain.rs  chain_queries.rs  epoch.rs  mempool.rs  merkle.rs  mod.rs  slashing.rs  token_ops.rs  transaction.rs  vm.rs
src/network/: behaviour.rs  libp2p_node.rs  mod.rs  node.rs  sync.rs  transport.rs
src/storage/: db.rs  mod.rs
src/types/: error.rs  mod.rs
src/wallet/: keystore.rs  mod.rs  wallet.rs
tests/: integration_chain_validation.rs  integration_eth_block_receipts.rs  integration_eth_logs_and_fees.rs  integration_evm_state_persistence.rs  integration_mempool.rs  integration_p2p.rs  integration_restart.rs  integration_sentrix_native_rpc.rs  integration_sentrix_status.rs  integration_sliding_window.rs  integration_supply.rs  integration_sync.rs  integration_token.rs  integration_trie.rs  integration_tx.rs  integration_voyager.rs
tests/common/: mod.rs
tools/add-self-stake/: Cargo.toml
tools/bench-tps/: Cargo.toml
tools/bench-tps/src/: main.rs
tools/claim-rewards/: Cargo.toml
tools/delegate-once/: Cargo.toml
(+56 files in other folders)
