[package]
name = "sentrix"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

# ── Lint configuration ────────────────────────────────────────────────────────
# Enforced via CI: `cargo clippy -- -D warnings`
# See also .clippy.toml for configurable thresholds (arg count, stack size, etc.)
[lints.clippy]
# Panic-family: production paths must not silently panic
unwrap_used    = "deny"
expect_used    = "deny"
panic          = "deny"
# Performance / safety
large_futures       = "warn"
large_stack_frames  = "warn"
# Code quality
todo = "warn"

[lints.rust]
# missing_docs: tracked but suppressed at crate level until documentation sprint.
# Enable per-module by removing #![allow(missing_docs)] from lib.rs when ready.
missing_docs = "warn"

[dependencies]
# Crypto
secp256k1 = { version = "0.29", features = ["rand", "recovery", "serde"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage (pure Rust — no C deps, no libclang needed)
sled = "0.34"

# Networking
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# API
axum = "0.7"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zeroize = "1.7"
subtle = "2.5"
