[workspace]
resolver = "2"
members = [".", "crates/sentrix-primitives", "crates/sentrix-wallet", "crates/sentrix-trie", "crates/sentrix-staking", "crates/sentrix-evm", "crates/sentrix-bft", "crates/sentrix-core", "crates/sentrix-network", "crates/sentrix-rpc", "crates/sentrix-storage", "bin/sentrix"]

[package]
name = "sentrix"
version = "2.0.0"
edition = "2024"
license = "BUSL-1.1"
description = "Fast, secure Layer-1 blockchain built in Rust"
homepage = "https://sentrix.sentriscloud.com"
repository = "https://github.com/sentrix-labs/sentrix"
keywords = ["blockchain", "layer1", "poa", "dpos", "bft"]
categories = ["cryptography::cryptocurrencies"]

# ── Lint configuration ────────────────────────────────────────────────────────
# Enforced via CI: `cargo clippy -- -D warnings`
# See also .clippy.toml for configurable thresholds (arg count, stack size, etc.)
[lints.clippy]
# Panic-family: production paths must not silently panic
unwrap_used    = "deny"
expect_used    = "deny"
panic          = "deny"
# Performance / safety
large_futures       = "warn"
large_stack_frames  = "warn"
# Code quality
todo = "warn"

[lints.rust]
# missing_docs: tracked but suppressed at crate level until documentation sprint.
# Enable per-module by removing #![allow(missing_docs)] from lib.rs when ready.
missing_docs = "warn"

[dependencies]
# Workspace crates
sentrix-primitives = { path = "crates/sentrix-primitives" }
sentrix-wallet = { path = "crates/sentrix-wallet" }
sentrix-trie = { path = "crates/sentrix-trie" }
sentrix-staking = { path = "crates/sentrix-staking" }
sentrix-evm = { path = "crates/sentrix-evm" }
sentrix-bft = { path = "crates/sentrix-bft" }
sentrix-core = { path = "crates/sentrix-core" }
sentrix-network = { path = "crates/sentrix-network" }
sentrix-rpc = { path = "crates/sentrix-rpc" }

# Crypto
secp256k1 = { version = "0.31", features = ["rand", "recovery", "serde"] }
sha2 = "0.10"
sha3 = "0.11"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
argon2 = "0.5"
rand = "0.9"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage (MDBX — high-performance memory-mapped storage)
sentrix-storage = { path = "crates/sentrix-storage" }

# Networking
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "tokio", "request-response", "macros"] }

# API
axum = "0.8"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }

# EVM
revm = { version = "37", default-features = false, features = ["std", "serde", "optional_balance_check", "optional_no_base_fee"] }
alloy-primitives = "1.5"
alloy-consensus = { version = "2.0", default-features = false, features = ["std", "k256"] }
alloy-eips = { version = "2.0", default-features = false, features = ["std"] }
alloy-rlp = "0.3"

# Utils
uuid = { version = "1.0", features = ["v4"] }
# A8: chrono for calendar math instead of hand-rolled Gregorian conversion.
# `default-features = false` drops the unmaintained `time` 0.1 transitive
# dep and keeps the build small; only the clock feature is enabled.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
zeroize = "1.7"
subtle = "2.5"
blake3 = "1.5"
lru = "0.17"
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
