[package]
name = "sentrix-bft"
version = "2.0.0"
edition = "2024"
license = "BUSL-1.1"
description = "BFT consensus engine (Tendermint-style) for Sentrix blockchain"
repository = "https://github.com/sentrix-labs/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sentrix-staking = { path = "../sentrix-staking" }
sentrix-wallet = { path = "../sentrix-wallet" }
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { version = "0.31", features = ["rand", "recovery", "serde"] }
sha2 = "0.10"
sha3 = "0.11"
tracing = "0.1"

[dev-dependencies]
bincode = "1.3"
