[package]
name = "sentrix-evm"
version = "2.0.0"
edition = "2024"
license = "BUSL-1.1"
description = "EVM execution layer (revm 37) for Sentrix blockchain"
repository = "https://github.com/sentrix-labs/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
revm = { version = "37", default-features = false, features = ["std", "serde", "optional_balance_check", "optional_no_base_fee"] }
alloy-primitives = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
