[package]
name = "sentrix-evm"
version = "2.1.33"
edition = "2024"
license = "BUSL-1.1"
description = "EVM execution layer (revm 37) for Sentrix blockchain"
repository = "https://github.com/sentrix-labs/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sentrix-precompiles = { path = "../sentrix-precompiles" }
revm = { version = "37", default-features = false, features = ["std", "serde", "optional_balance_check", "optional_no_base_fee"] }
alloy-primitives = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tracing = "0.1"
