[package]
name = "sentrix-grpc"
version = "2.1.77"
edition = "2024"
license = "BUSL-1.1"
description = "Tonic gRPC supplement transport for Sentrix Chain (parallel to JSON-RPC eth_*)"

# 2026-05-05 v0.1 skeleton — handlers in src/lib.rs return tonic::Status::unimplemented
# until main.rs integration lands. Reference design doc:
# founder-private/audits/2026-05-05-grpc-service-proto-draft.md.

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.14", features = ["transport"] }
prost = "0.13"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
async-stream = "0.3"
sentrix-core = { path = "../sentrix-core" }
sentrix-primitives = { path = "../sentrix-primitives" }
# v0.4 GetValidatorSet uses EpochManager::epoch_for_height for the
# active-set's epoch number.
sentrix-staking = { path = "../sentrix-staking" }
# v0.3: server-streaming StreamEvents subscribes to sentrix-rpc::events::EventBus
# (the existing tokio broadcast bus that powers the WebSocket eth_subscribe path).
# Same bus, same Lagged semantics — gRPC-Web and JSON-RPC WS see the same event
# ordering at the broadcast::Sender boundary.
sentrix-rpc = { path = "../sentrix-rpc" }
hex = "0.4"
bincode = "1.3"

# Forbid unsafe code in this crate. Tonic + prost generate code so we
# rely on their respective safety reviews; our handwritten code path
# stays unsafe-free.

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
