[package]
name = "sentrix-network"
version = "1.5.0"
edition = "2024"
license = "BUSL-1.1"
description = "Sentrix P2P networking — libp2p gossipsub, kademlia, request-response"
publish = false

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sentrix-bft = { path = "../sentrix-bft" }
sentrix-core = { path = "../sentrix-core" }

libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "tokio", "request-response", "macros"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
