[package]
name = "sentrix-staking"
version = "2.1.77"
edition = "2024"
license = "BUSL-1.1"
description = "DPoS staking, epoch management, and slashing for Sentrix blockchain"
repository = "https://github.com/sentrix-labs/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.11"
tracing = "0.1"
