[package]
name = "sentrix-storage"
version = "2.1.23"
edition = "2024"
license = "BUSL-1.1"
description = "Sentrix storage layer — libmdbx wrapper for blockchain persistence"
publish = false

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }

# Storage backend
libmdbx = "0.6"

# Encoding
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling + logging
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1.23", features = ["v4"] }
