[package]
name = "sentrix-trie"
version = "1.5.0"
edition = "2024"
license = "BUSL-1.1"
description = "Binary Sparse Merkle Tree (256-level) with sled persistence for Sentrix blockchain state"
repository = "https://github.com/satyakwok/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sled = "0.34"
lru = "0.12"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
