[package]
name = "sentrix-trie"
version = "2.0.0"
edition = "2024"
license = "BUSL-1.1"
description = "Binary Sparse Merkle Tree (256-level) with MDBX persistence for Sentrix blockchain state"
repository = "https://github.com/sentrix-labs/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sentrix-storage = { path = "../sentrix-storage" }
lru = "0.17"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
