[package]
name = "sentrix-wallet"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "Wallet, keystore encryption, and signing for Sentrix blockchain"
repository = "https://github.com/satyakwok/sentrix"

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
secp256k1 = { version = "0.29", features = ["rand", "recovery", "serde"] }
sha3 = "0.11"
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["hmac"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.7"
sha2 = "0.10"
