[package]
name = "sentrix-wire"
version = "2.1.75"
edition = "2024"
license = "BUSL-1.1"
description = "Sentrix libp2p wire protocol types — request/response enums, gossipsub envelopes, protocol version + topic constants. No libp2p dep."
repository = "https://github.com/sentrix-labs/sentrix"

# Why this crate exists
# -------------------------
# Extracted from `sentrix-network::behaviour` during the 45-crate split (Tier 1
# template #5 per `internal design doc`). Lives
# separately so other crates (e.g. future `sentrix-sdk`, monitoring tools)
# can reference the canonical wire types WITHOUT pulling the full libp2p
# network stack as a transitive dep. The framing codec (`SentrixCodec`) and
# all libp2p-specific machinery stay in `sentrix-network`.
#
# Breaking-change policy: wire types are part of the on-network protocol
# surface. Any additive variant must be rolled out testnet-first with a
# version bump on `SENTRIX_PROTOCOL`. Removing a variant requires a hard
# fork at a pinned height — never just drop it.

[dependencies]
sentrix-primitives = { path = "../sentrix-primitives" }
sentrix-bft = { path = "../sentrix-bft" }

secp256k1 = { version = "0.31", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
secp256k1 = { version = "0.31", features = ["recovery", "rand", "global-context"] }
sentrix-wallet = { path = "../sentrix-wallet" }
